build Toggle, Mobile Menu Links, Background patter, Responsive mobile Header and Background pattern

--- a/assets/scss/_globals.scss
+++ b/assets/scss/_globals.scss
@@ -15,6 +15,10 @@ body {
     font-weight: fontW-sm;
     line-height: 1.4;
     color: $darkGrayishBlue;
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 // Flexbox
