--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import "_animations.scss";
 
 @import "_globals.scss";
+@import "_background-pattern.scss";
 @import "_header.scss";
 @import "_hero.scss";
 @import "_features.scss";
